--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -61,6 +61,9 @@
     .hide-on-mobile{
         display: none;
     }
+    .show-on-mobile{
+        display: block;
+    }
     
     .header__search-inp{
         position: fixed;
